fixed stretching of rows

--- a/style.css
+++ b/style.css
@@ -14,17 +14,6 @@ body {
   background-color: #3b3a3a;
 }
 
-.row {
-  gap: 2px;
-  display: flex;
-  flex: 1;
-}
-
-.box {
-  padding: 1px;
-  background-color: aquamarine;
-}
-
 .container {
   padding: 30px;
   display: flex;
@@ -33,6 +22,19 @@ body {
   align-items: center;
   justify-content: center;
   width: 960px;
+  height: 960px;
+}
+
+.row {
+  gap: 2px;
+  display: flex;
+  flex: 1;
+  width: 100%;
+}
+
+.box {
+  background-color: aquamarine;
+  flex: 1;
 }
 
 .hovered {
